--- a/EEG.html
+++ b/EEG.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<script src="https://cdn.jsdelivr.net/npm/fft.js/dist/fft.min.js"></script>
+
 <title>EEG Dashboard HD — Debugged</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
