--- a/EEG.html
+++ b/EEG.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
+<script src="https://cdn.jsdelivr.net/npm/fft.js@0.3.0/dist/fft.min.js"></script>
 <title>EEG Dashboard — Main (Chart.js, 12 charts)</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <!-- Chart.js + FFT -->
