--- a/IDscan.html
+++ b/IDscan.html
@@ -1,101 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dual Lens Split Screen</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dual Camera Heart Rate & SpO₂ Monitor</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      background: #121212;
-    }
-    .split-container {
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { background: black; font-family: Arial, sans-serif; }
+
+    .container {
       display: flex;
       flex-direction: row;
-      height: 100vh;
-      width: 100vw;
-      min-height: 100vh;
-      min-width: 100vw;
+      width: 100vw; height: 100vh;
     }
-    .split-left, .split-right {
-      flex: 1 1 50%;
-      height: 100vh;
-      width: 50vw;
-      border: none;
-      background: #181818;
-      display: block;
+    .screen {
+      position: relative;
+      flex: 1;
+      overflow: hidden;
     }
-    .split-left {
-      border-right: 2px solid #222;
+    video {
+      width: 100%; height: 100%;
+      object-fit: cover;
     }
-    @media (max-width: 900px) {
-      .split-container {
-        flex-direction: column;
-      }
-      .split-left, .split-right {
-        height: 50vh;
-        width: 100vw;
-      }
-      .split-left {
-        border-right: none;
-        border-bottom: 2px solid #222;
-      }
+
+    /* Responsive: stack vertically on small screens */
+    @media (max-width: 768px) {
+      .container { flex-direction: column; }
+      .screen { height: 50%; }
+    }
+
+    .hud {
+      position: absolute;
+      top: 10px; left: 10px;
+      color: #00e5ff;
+      font-size: 1rem;
+      background: rgba(0,0,0,0.5);
+      padding: 6px 10px;
+      border-radius: 6px;
+      z-index: 10;
+    }
+
+    .charts {
+      position: absolute;
+      bottom: 0; left: 0;
+      width: 100%; height: 30%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      background: rgba(0,0,0,0.4);
+      z-index: 10;
+    }
+    canvas {
+      flex: 1;
+      max-width: 48%;
+      height: 100%;
+      background: transparent;
     }
   </style>
 </head>
 <body>
-  <div class="split-container">
-    <!-- Left: vpnskynet.com/# -->
-    <iframe
-      id="skynetFrame"
-      class="split-left"
-      src="https://vpnskynet.com/#"
-      allow="camera; microphone"
-      allowfullscreen
-      frameborder="0"
-      title="VPN Skynet Main"
-    ></iframe>
-    <!-- Right: vpnskynet.com/debo/index.html -->
-    <iframe
-      class="split-right"
-      src="https://vpnskynet.com/debo/index.html"
-      allow="camera; microphone"
-      allowfullscreen
-      frameborder="0"
-      title="VPN Skynet Dual Lens"
-    ></iframe>
-  </div>
-  <script>
-    // When the left iframe loads, try to trigger "Start" button click inside vpnskynet.com/#
-    document.getElementById('skynetFrame').addEventListener('load', function() {
-      // Attempt to click the "Start" button inside the iframe
-      // This only works if both parent and child are same origin (vpnskynet.com)
-      try {
-        const skynetWin = document.getElementById('skynetFrame').contentWindow;
-        // Wait for DOM to be ready in the iframe and then click the start button
-        skynetWin.postMessage({ action: "autoStart" }, "https://vpnskynet.com");
-      } catch (e) {
-        // Fails for cross-origin, so only works if both pages are same domain
-        // If you control vpnskynet.com/#, add a message listener to click Start
-        // See below for code to add on vpnskynet.com/# page:
-      }
-    });
+  <div class="container">
+    <!-- Front camera screen -->
+    <div class="screen">
+      <video id="frontCam" autoplay playsinline></video>
+      <div class="hud">
+        ❤️ HR: <span id="hrFront">--</span> bpm<br>
+        🌬 SpO₂: <span id="spo2Front">--</span> %
+      </div>
+      <div class="charts">
+        <canvas id="ppgFront"></canvas>
+        <canvas id="spo2FrontChart"></canvas>
+      </div>
+    </div>
 
-    // If you also want to trigger after explicit permissions (browser), you must do that from inside the iframe
-    // See below for code to add to vpnskynet.com/# page:
-    /*
-      window.addEventListener('message', function(event) {
-        if (event.origin === "https://vpnskynet.com" && event.data.action === "autoStart") {
-          // Find and click the "Start" button
-          var startBtn = document.querySelector('button, input[type="button"], .start-button, #start, [data-action="start"]');
-          if (startBtn) startBtn.click();
-        }
+    <!-- Rear camera screen -->
+    <div class="screen">
+      <video id="rearCam" autoplay playsinline></video>
+      <div class="hud">
+        ❤️ HR: <span id="hrRear">--</span> bpm<br>
+        🌬 SpO₂: <span id="spo2Rear">--</span> %
+      </div>
+      <div class="charts">
+        <canvas id="ppgRear"></canvas>
+        <canvas id="spo2RearChart"></canvas>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    async function initCameras() {
+      try {
+        const frontStream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: "user" }, audio: false
+        });
+        document.getElementById('frontCam').srcObject = frontStream;
+
+        const rearStream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: "environment" }, audio: false
+        });
+        document.getElementById('rearCam').srcObject = rearStream;
+      } catch (err) {
+        alert("Camera error: " + err);
+      }
+    }
+    initCameras();
+
+    // Chart.js setup for each screen
+    function makeChart(ctx, label, color) {
+      return new Chart(ctx, {
+        type: 'line',
+        data: { labels: [], datasets: [{ label, data: [], borderColor: color, fill: false }] },
+        options: { animation: false, scales: { x: { display: false }, y: { display: true } } }
       });
-    */
+    }
+
+    const ppgFront = makeChart(document.getElementById('ppgFront').getContext('2d'), 'PPG Front', '#00e5ff');
+    const spo2FrontChart = makeChart(document.getElementById('spo2FrontChart').getContext('2d'), 'SpO₂ Front', '#ff4081');
+    const ppgRear = makeChart(document.getElementById('ppgRear').getContext('2d'), 'PPG Rear', '#00e5ff');
+    const spo2RearChart = makeChart(document.getElementById('spo2RearChart').getContext('2d'), 'SpO₂ Rear', '#ff4081');
+
+    // Simulated data update (replace with real rPPG/SpO₂ algorithm)
+    setInterval(() => {
+      const hr = Math.floor(60 + Math.random() * 40);
+      const spo2 = Math.floor(95 + Math.random() * 5);
+      const t = new Date().toLocaleTimeString();
+
+      // Update HUD
+      document.getElementById('hrFront').textContent = hr;
+      document.getElementById('spo2Front').textContent = spo2;
+      document.getElementById('hrRear').textContent = hr;
+      document.getElementById('spo2Rear').textContent = spo2;
+
+      // Update charts
+      [ppgFront, spo2FrontChart, ppgRear, spo2RearChart].forEach(chart => {
+        chart.data.labels.push(t);
+        chart.data.datasets[0].data.push(chart.data.datasets[0].label.includes('PPG') ? hr : spo2);
+        if (chart.data.labels.length > 20) {
+          chart.data.labels.shift();
+          chart.data.datasets[0].data.shift();
+        }
+        chart.update();
+      });
+    }, 1000);
   </script>
 </body>
 </html>
